# training-on-issues

./: .gitignore  Cargo.toml  README.MD  labeled_issues_train.jsonl
src/: lib.rs  main.rs  utils.rs
src/migrations/: 20200824190010_json.sql
